[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/Backgrounds/quit_text.png" type="Texture" id=1]
[ext_resource path="res://assets/Sounds/lose.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/Backgrounds/home_text.png" type="Texture" id=3]
[ext_resource path="res://assets/Backgrounds/game_over_text.png" type="Texture" id=4]
[ext_resource path="res://assets/Backgrounds/play_again_text.png" type="Texture" id=5]
[ext_resource path="res://LoseScene.gd" type="Script" id=6]
[ext_resource path="res://assets/BLOODY.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/Sounds/clicked.ogg" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 0, 0, 0.372549 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.945098, 0.52549, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.894118, 0.705882, 0.133333, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0.34902, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
visible = false

[node name="Panel" type="Panel" parent="."]
margin_left = 256.0
margin_top = 48.0
margin_right = 768.0
margin_bottom = 152.0
custom_styles/panel = SubResource( 12 )

[node name="GameOverText" type="TextureRect" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 256.0
margin_top = 40.0
margin_right = 776.0
margin_bottom = 160.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="PlayAgain" type="Button" parent="."]
margin_left = 384.0
margin_top = 314.0
margin_right = 640.0
margin_bottom = 378.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[node name="Quit" type="Button" parent="."]
margin_left = 384.0
margin_top = 498.0
margin_right = 640.0
margin_bottom = 562.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
icon = ExtResource( 1 )
icon_align = 1
expand_icon = true

[node name="Home" type="Button" parent="."]
margin_left = 384.0
margin_top = 401.5
margin_right = 640.0
margin_bottom = 465.5
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
mix_target = 1

[node name="ButtonClickedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="GameOverDescription" type="Label" parent="."]
margin_left = 2.0
margin_top = 200.0
margin_right = 1023.0
margin_bottom = 236.0
custom_colors/font_color = Color( 0.478431, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "YOU DEAD!"
align = 1

[connection signal="pressed" from="PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
